# ZephyrRTOS

./: CMakeLists.txt  Kconfig  README.md
app_samples/ble_peripheral/: CMakeLists.txt  prj.conf
app_samples/central_multilink/: CMakeLists.txt  build.sh  prj.conf
app_samples/central_multilink/boards/: esp32.overlay
app_samples/central_multilink/src/: main.c
app_samples/ipsp_tcp_nrf52/: CMakeLists.txt  build.sh  nrf52840dongle_nrf52840.overlay  prj.conf
app_samples/ipsp_udp_nrf52/: CMakeLists.txt  build.sh  prj.conf
app_samples/ipsp_udp_nrf52/boards/: nrf52840dongle_nrf52840.overlay
app_samples/ipsp_udp_nrf52/src/: main.c
app_samples/ipsp_udp_nrf52/src/net_ble/: net_ble.c  net_ble.h
app_samples/ipsp_udp_nrf52/src/ntp_clock/: ntp_clock.c  ntp_clock.h
app_samples/z_esp32-wroom32/: CMakeLists.txt  build.sh  esp32_devkitc_wroom.overlay  prj.conf
app_samples/z_nrf52_dongle/: CMakeLists.txt  build.sh  nrf52840dongle_nrf52840.overlay  prj.conf  sample.yaml
app_samples/z_nrf52_dongle/src/: main.c
app_samples/z_nrf52_dongle/src/led_indication/: led_indication.c  led_indication.h
app_samples/z_nrf52_dongle/src/my_timer/: my_timer.c  my_timer.h
app_samples/z_stm32f401ccu6/: CMakeLists.txt  app.overlay  build.sh  prj.conf  sample.yaml
drivers/: CMakeLists.txt  Kconfig
drivers/SD_drv/: CMakeLists.txt  Kconfig  SD_drv.c  SD_drv.h
drivers/nrf24_drv/: CMakeLists.txt  Kconfig  nrf24_drv.c  nrf24_drv.h
drivers/sh1106_drv/: CMakeLists.txt  Kconfig  sh1106_drv.c  sh1106_drv.h
subsys/: CMakeLists.txt  Kconfig
subsys/SdFat/: Kconfig  (+3 more)
zephyr/: module.yml
(+17 files in other folders)
